--- a/src/aura/QueryBuilder/QueryBuilder.cmp
+++ b/src/aura/QueryBuilder/QueryBuilder.cmp
@@ -12,30 +12,21 @@
                         onchange="{! c.handleOptionSelected }"/>
 
 
-<!--    <aura:attribute name="options" type="List" default="[-->
-<!--        { label: 'English', value: 'en' },-->
-<!--        { label: 'German', value: 'de' },-->
-<!--        { label: 'Spanish', value: 'es' },-->
-<!--        { label: 'French', value: 'fr' },-->
-<!--        { label: 'Italian', value: 'it' },-->
-<!--        { label: 'Japanese', value: 'ja' }]"/>-->
+    <aura:attribute name="options" type="List" default="[
+        { label: 'English', value: 'en' },
+        { label: 'German', value: 'de' },
+        { label: 'Spanish', value: 'es' },
+        { label: 'French', value: 'fr' },
+        { label: 'Italian', value: 'it' },
+        { label: 'Japanese', value: 'ja' }]"/>
 
-<!--    <lightning:dualListbox name="languages"-->
-<!--                           label="Select Fields"-->
-<!--                           sourceLabel="Available"-->
-<!--                           selectedLabel="Selected"-->
-<!--                           fieldLevelHelp="This is a dual listbox"-->
-<!--                           options="{!v.options}"-->
-<!--                           onchange="{! c.choiceFields }"/>-->
-<!--    <table class="slds-table slds-table_bordered slds-table_cell-buffer">-->
-<!--        <tbody>-->
-<!--        <aura:iteration items="{!v.objects}" var="obj">-->
-<!--            <tr>-->
-<!--                <td> {!obj}</td>-->
-<!--            </tr>-->
-<!--        </aura:iteration>-->
-<!--        </tbody>-->
-<!--    </table>-->
+    <lightning:dualListbox name="languages"
+                           label="Select Fields"
+                           sourceLabel="Available"
+                           selectedLabel="Selected"
+                           fieldLevelHelp="This is a dual listbox"
+                           options="{!v.options}"
+                           onchange="{! c.choiceFields }"/>
 
 
 </aura:component>
