--- a/src/aura/QueryBuilder/QueryBuilder.cmp
+++ b/src/aura/QueryBuilder/QueryBuilder.cmp
@@ -3,24 +3,39 @@
  -->
 
 <aura:component description="QueryBuilder" controller="QueryBuilder" implements="flexipage:availableForAllPageTypes">
-        <aura:attribute name="picklist" type="List" default="[]"/>
-        <aura:attribute name="objects" type="List" default="[]"/>
-        <aura:attribute name="fieldList" type="List" default="[]"/>
-        <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:attribute name="objects" type="List" default="[]"/>
+    <aura:attribute name="fieldList" type="List" default="[]"/>
+    <aura:attribute name="mainObject" type="String" default=""/>
+    <aura:attribute name="newFields" type="List" default="[]"/>
+    <aura:attribute name="fieldForExecute" type="Object"/>
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
     <lightning:combobox name="progress" label="Pick Object" value="inProgress" placeholder="Objects"
                         options="{!v.objects}"
                         onchange="{!c.handleOptionSelected}"/>
 
 
-    <lightning:dualListbox name="languages"
+    <lightning:dualListbox aura:id="fields"
+                           name="fields"
                            label="Select Fields"
                            sourceLabel="Available"
                            selectedLabel="Selected"
-                           fieldLevelHelp="This is a dual listbox"
                            options="{!v.fieldList}"
                            onchange="{!c.choiceFields}"/>
 
-        <lightning:button variant="brand" label="Execute" title="Execute" onclick="{! c.handleClick }" />
+    <lightning:button variant="brand" label="Execute" title="Execute" onclick="{!c.executeQuery}"/>
+
+
+    <!--    Спочатку пробував так, не вийшло-->
+    <tbody>
+    <aura:iteration items="{!v.fieldForExecute}" var="obj">
+        <tr>
+            <td>{!obj}</td>
+        </tr>
+    </aura:iteration>
+    </tbody>
+
+    <!--    Так теж :(    -->
+    <lightning:tree items="{!v.fieldForExecute}"/>
 
 </aura:component>
