--- a/src/aura/QueryBuilder/QueryBuilder.cmp
+++ b/src/aura/QueryBuilder/QueryBuilder.cmp
@@ -4,38 +4,57 @@
 
 <aura:component description="QueryBuilder" controller="QueryBuilder" implements="flexipage:availableForAllPageTypes">
     <aura:attribute name="objects" type="List" default="[]"/>
+    <aura:attribute name="operators" type="List" default="[]"/>
     <aura:attribute name="fieldList" type="List" default="[]"/>
+    <aura:attribute name="pickedFieldsForFilter" type="Object"/>
     <aura:attribute name="mainObject" type="String" default=""/>
     <aura:attribute name="newFields" type="List" default="[]"/>
+    <aura:attribute name="pickOperator" type="String"/>
+    <aura:attribute name="inputValue" type="String"/>
     <aura:attribute name="fieldForExecute" type="Object"/>
+    <aura:attribute name="inputs" type="Aura.Component[]"/>
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
     <lightning:combobox name="progress" label="Pick Object" value="inProgress" placeholder="Objects"
                         options="{!v.objects}"
                         onchange="{!c.handleOptionSelected}"/>
 
+    <div style="margin: auto">
+        <lightning:dualListbox aura:id="fields"
+                               name="fields"
+                               label="Select Fields"
+                               sourceLabel="Available"
+                               selectedLabel="Selected"
+                               options="{!v.fieldList}"
+                               onchange="{!c.choiceFields}"/>
 
-    <lightning:dualListbox aura:id="fields"
-                           name="fields"
-                           label="Select Fields"
-                           sourceLabel="Available"
-                           selectedLabel="Selected"
-                           options="{!v.fieldList}"
-                           onchange="{!c.choiceFields}"/>
+        <h3 style="font-size: large; margin-top: 10px">Filter</h3>
+
+        <div id="filterList" class="divForPicklist" aura:id="filter123">
+            <lightning:combobox name="field" class="picklist" label="Pick Field"
+                                value="inProgress"
+                                placeholder="Fields"
+                                options="{!v.fieldList}"
+                                onchange="{!c.pickFieldForFilter}"
+            />
+            <lightning:combobox name="operator" class="picklist" label="Pick Operator"
+                                value="inProgress" placeholder="Operator"
+                                options="{!v.operators}"
+                                onchange="{!c.pickOperator}"
+            />
+            <lightning:input name="value" class="picklist" label="Pick Value"
+                             placeholder="Value" value="{!v.inputValue}"
+            />
+            <div id="'fs"></div>
+            <lightning:button class="buttons" iconName="utility:add" title="Add Filter" onclick="{!c.cloneInputs}"/>
+            <lightning:button class="buttons" iconName="utility:dash" title="Remove Filter" onclick="{!c.removeLastInputs}"/>
+        </div>
+        </div>
+        {!v.inputs}
+
 
     <lightning:button variant="brand" label="Execute" title="Execute" onclick="{!c.executeQuery}"/>
 
-
-    <!--    Спочатку пробував так, не вийшло-->
-<!--    <tbody>-->
-<!--    <aura:iteration items="{!v.fieldForExecute}" var="obj">-->
-<!--        <tr>-->
-<!--            <td>{!obj}</td>-->
-<!--        </tr>-->
-<!--    </aura:iteration>-->
-<!--    </tbody>-->
-
-    <!--    Так теж :(    -->
     <lightning:tree items="{!v.fieldForExecute}" header="Tree"/>
 
 </aura:component>
