--- a/src/aura/inputs/Inputs.cmp
+++ b/src/aura/inputs/Inputs.cmp
@@ -3,22 +3,34 @@
  -->
 
 <aura:component description="inputs">
+    <aura:handler name="inputEvent" event="c:setInputs" action="{!c.handleComponent}"/>
+    <aura:attribute name="fieldsInInput" type="SObject"/>
+    <aura:attribute name="inputOperations" type="String"/>
 
     <div id="filterList" class="divForPicklist" aura:id="filter123">
-    <lightning:combobox name="field" class="picklist" label="Pick Field"
-                        value="inProgress"
-                        placeholder="Fields"
-                        options="{!v.fieldList}"
-                        onchange="{!c.pickFieldForFilter}"
-    />
-    <lightning:combobox name="operator" class="picklist" label="Pick Operator"
-                        value="inProgress" placeholder="Operator"
-                        options="{!v.operators}"
-                        onchange="{!c.pickOperator}"
-    />
-    <lightning:input name="value" class="picklist" label="Pick Value"
-                     placeholder="Value" value="{!v.inputValue}"
-    />
+        <lightning:combobox name="field" class="picklist" label="Pick Field"
+                            value="inProgress"
+                            placeholder="Fields"
+                            options="{!v.fieldsInInput}"
+                            onchange="{!c.pickFieldForFilter}"
+                            aura:id="fieldsInput"
+        />
+        <lightning:combobox name="operator" class="picklist" label="Pick Operator"
+                            value="inProgress" placeholder="Operator"
+                            options="{!v.inputOperations}"
+                            onchange="{!c.pickOperator}"
+                            aura:id="operatorsInput"
+        />
+        <lightning:input name="value" class="picklist" label="Pick Value"
+                         placeholder="Value" value="{!v.inputValue}"
+                         aura:id="valueInput"
+        />
+        <div id="'fs">
+            <lightning:button class="buttons" iconName="utility:add" title="Add Filter"
+                              onclick="{!c.inpEvent}"/>
+            <lightning:button class="buttons" iconName="utility:dash" title="Remove Filter"
+                              onclick="{!c.removeLastInputs}"/>
+        </div>
     </div>
 
 </aura:component>
