--- a/src/aura/QueryBuilder/QueryBuilder.css
+++ b/src/aura/QueryBuilder/QueryBuilder.css
@@ -3,13 +3,15 @@
  */
 
 .THIS .picklist{
-    width: 15%;
+    width: 24%;
     margin: 15px;
 }
 .THIS .divForPicklist{
     display: flex;
     margin: 0 auto;
     align-items: center;
+    flex-wrap: wrap;
+    float: left;
 }
 
 .THIS #filterList lightning-combobox label{
