--- a/src/aura/QueryBuilder/QueryBuilder.cmp
+++ b/src/aura/QueryBuilder/QueryBuilder.cmp
@@ -2,25 +2,27 @@
  - Created by YaroslavDehtiar on 27.08.2019.
  -->
 
-<aura:component description="QueryBuilder" controller="QueryBuilder" implements="flexipage:availableForAllPageTypes">
+<aura:component description="QueryBuilder" controller="QueryBuilder" implements="flexipage:availableForAllPageTypes,
+flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
     <aura:attribute name="objects" type="List" default="[]"/>
     <aura:attribute name="operators" type="List" default="[]"/>
     <aura:attribute name="fieldList" type="List" default="[]"/>
-    <aura:attribute name="pickedFieldsForFilter" type="Object"/>
+    <aura:attribute name="pickedFieldsForFilter" type="Object" default="[]"/>
     <aura:attribute name="mainObject" type="String" default=""/>
     <aura:attribute name="newFields" type="List" default="[]"/>
-    <aura:attribute name="pickOperator" type="String"/>
+    <aura:attribute name="pickOperator" type="String" default="[]"/>
     <aura:attribute name="inputValue" type="String"/>
+    <aura:attribute name="finalString" type="List" default="[]"/>
     <aura:attribute name="fieldForExecute" type="Object"/>
     <aura:attribute name="inputs" type="Aura.Component[]"/>
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
-    <aura:registerEvent name="inputEvent" type="c:setInputs"/>
+
 
     <lightning:combobox name="progress" label="Pick Object" value="inProgress" placeholder="Objects"
                         options="{!v.objects}"
                         onchange="{!c.handleOptionSelected}"/>
 
-        <div style="margin: auto">
+    <div style="margin: auto">
         <lightning:dualListbox aura:id="fields"
                                name="fields"
                                label="Select Fields"
@@ -29,14 +31,15 @@
                                options="{!v.fieldList}"
                                onchange="{!c.choiceFields}"/>
 
+        <lightning:button name="filter" variant="brand" label="Create Filter" onclick="{!c.createFilter}"
+        disabled="true" aura:id ="button"/>
         <h3 style="font-size: large; margin-top: 10px">Filter</h3>
+
 
         <div id="filterList" class="divForPicklist" aura:id="filter123">
             {!v.inputs}
         </div>
     </div>
-
-
 
     <lightning:button variant="brand" label="Execute" title="Execute" onclick="{!c.executeQuery}"/>
 
