--- a/src/aura/QueryBuilder/QueryBuilder.cmp
+++ b/src/aura/QueryBuilder/QueryBuilder.cmp
@@ -10,7 +10,9 @@ flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
     <aura:attribute name="newFields" type="List" default="[]"/>
     <aura:attribute name="fieldForExecute" type="Object"/>
     <aura:attribute name="inputs" type="Aura.Component[]"/>
+    <aura:attribute name="inputIds" type="Integer" default="0"/>
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler name="inputIds" action="{!c.getIds}" event="c:setInputs"/>
 
 
     <lightning:combobox name="progress" label="Pick Object" value="inProgress" placeholder="Objects"
@@ -27,16 +29,20 @@ flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
                                onchange="{!c.choiceFields}"/>
 
         <lightning:button name="filter" variant="brand" label="Create Filter" onclick="{!c.createFilter}"
-        disabled="true" aura:id ="button"/>
+                          disabled="false" aura:id="button"/>
         <h3 style="font-size: large; margin-top: 10px">Filter</h3>
 
 
         <div id="filterList" class="divForPicklist" aura:id="filter123">
             {!v.inputs}
         </div>
+        <div class="sendFields" id="inputClass">
+            <c:inputs aura:id="sendFields" inpFieldList="{!v.fieldList}"/>
+        </div>
     </div>
 
-    <lightning:button variant="brand" label="Execute" title="Execute" onclick="{!c.executeQuery}"/>
+    <lightning:button variant="brand" label="Execute" title="Execute"
+                      disabled="true" onclick="{!c.executeQuery}" aura:id="executeButton"/>
 
     <lightning:tree items="{!v.fieldForExecute}" header="Tree"/>
 
