--- a/src/aura/inputs/Inputs.cmp
+++ b/src/aura/inputs/Inputs.cmp
@@ -10,7 +10,21 @@ flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
     <aura:attribute name="operators" type="List" default="[]"/>
     <aura:attribute name="pickOperators" type="String" default="[]"/>
     <aura:attribute name="newInputValue" type="String"/>
-    <aura:attribute name="countId" type="Integer" default="0"/>
+    <aura:attribute name="newInputs" type="Aura.Component[]"/>
+    <aura:attribute name="newInputIds" type="Integer" default="0"/>
+    <aura:registerEvent name="inputIds" type="c:setInputs"/>
+
+    <aura:method name="inputFieldsFromParent" action="{!c.updateFieldList}" access="public">
+        <aura:attribute name="newFields" type="List" default="[]"/>
+    </aura:method>
+    <aura:method name="getInputIds" action="{!c.setNewIds}" access="public">
+        <aura:attribute name="newIds" type="Integer"/>
+    </aura:method>
+    <aura:method name="cloneInp" action="{!c.cloneInputs}" access="public">
+        <aura:attribute name="newFields" type="List" default="[]"/>
+    </aura:method>
+
+
 
     <div id="filterList" class="divForPicklist">
         <lightning:combobox name="field" class="picklist" label="Pick Field"
@@ -36,6 +50,9 @@ flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
             <lightning:button class="buttons" iconName="utility:dash" title="Remove Filter"
                               onclick="{!c.removeLastInput}"/>
         </div>
+    </div>
+    <div>
+        {!v.newInputs}
     </div>
 
 </aura:component>
