--- a/src/aura/QueryBuilder/QueryBuilder.cmp
+++ b/src/aura/QueryBuilder/QueryBuilder.cmp
@@ -13,6 +13,7 @@ flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
     <aura:attribute name="inputIds" type="Integer" default="0"/>
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
     <aura:handler name="inputIds" action="{!c.getIds}" event="c:setInputs"/>
+    <aura:handler name="sendInput" action="{!c.createFilter}" event="c:setInputs"/>
 
 
     <lightning:combobox name="progress" label="Pick Object" value="inProgress" placeholder="Objects"
@@ -29,7 +30,7 @@ flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
                                onchange="{!c.choiceFields}"/>
 
         <lightning:button name="filter" variant="brand" label="Create Filter" onclick="{!c.createFilter}"
-                          disabled="false" aura:id="button"/>
+                          disabled="true" aura:id="button"/>
         <h3 style="font-size: large; margin-top: 10px">Filter</h3>
 
 
