--- a/src/aura/inputs/Inputs.cmp
+++ b/src/aura/inputs/Inputs.cmp
@@ -8,13 +8,17 @@ flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
     <aura:attribute name="inpFieldList" type="List" default="[]"/>
     <aura:attribute name="inpFieldsForFilter" type="Object" default="[]"/>
     <aura:attribute name="operators" type="List" default="[]"/>
+    <aura:attribute name="operatorsDateValue" type="List" default="[]"/>
     <aura:attribute name="pickOperators" type="String" default="[]"/>
     <aura:attribute name="newInputValue" type="String"/>
+    <aura:attribute name="today" type="Date" default=""/>
+    <aura:attribute name="operatorDateValue" type="Object" default="[]"/>
     <aura:attribute name="newInputs" type="Aura.Component[]"/>
     <aura:attribute name="comboboxValue" type="String" default=""/>
     <aura:attribute name="operatorsValue" type="String" default=""/>
-<!--    <aura:attribute name="newInputIds" type="Integer" default="0"/>-->
-<!--    <aura:registerEvent name="inputIds" type="c:setInputs"/>-->
+    <aura:attribute name="operatorDateValuesForExecute" type="String" default=""/>
+    <!--    <aura:attribute name="newInputIds" type="Integer" default="0"/>-->
+    <!--    <aura:registerEvent name="inputIds" type="c:setInputs"/>-->
     <aura:registerEvent name="sendInput" type="c:setInputs"/>
 
     <aura:method name="inputFieldsFromParent" action="{!c.updateFieldList}" access="public">
@@ -28,11 +32,9 @@ flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
     </aura:method>
 
 
-
     <div id="filterList" class="divForPicklist">
         <lightning:combobox name="field" class="picklist" label="Pick Field"
-                            value="{!v.comboboxValue}"
-                            placeholder="Fields"
+                            value="{!v.comboboxValue}" placeholder="Fields"
                             options="{!v.inpFieldList}"
                             onchange="{!c.inpPickedFieldsForFilter}"
                             aura:id="fieldsInput"
@@ -43,6 +45,18 @@ flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
                             onchange="{!c.pickOperator}"
                             aura:id="operatorsInput"
         />
+        <lightning:combobox name="dateOperator" class="picklist slds-hide" label="Pick Date Operator"
+                            value="{!v.operatorDateValuesForExecute}" placeholder="Date Operator"
+                            options="{!v.operatorsDateValue}"
+                            onchange="{!c.pickDateOperator}"
+                            aura:id="dateOperatorsInput"
+        />
+
+        <div aura:id="calendar" class="slds-hide">
+            <ui:inputDate aura:id="expdate" label="Today's Date"
+                          class="field" value="{!v.today}" displayDatePicker="true"/>
+        </div>
+
         <lightning:input name="value" class="picklist" label="Pick Value"
                          placeholder="Value" value="{!v.newInputValue}"
                          aura:id="valueInput"
