fix input changing

--- a/src/aura/inputs/Inputs.cmp
+++ b/src/aura/inputs/Inputs.cmp
@@ -23,6 +23,8 @@ flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
     <aura:attribute name="comboboxValue" type="String" default=""/>
     <aura:attribute name="typeForExecute" type="String" default=""/>
     <aura:attribute name="operatorsValue" type="String" default=""/>
+    <aura:attribute name="oldType" type="String" default="valueInput"/>
+    <aura:attribute name="newType" type="String" default="valueInput"/>
     <aura:attribute name="operatorDateValuesForExecute" type="String" default=""/>
     <aura:registerEvent name="sendInput" type="c:setInputs"/>
 
@@ -34,7 +36,7 @@ flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
     </aura:method>
 
 
-    <div id="filterList" class="divForPicklist">
+    <div id="filterList" class="divForPicklist" aura:id="filterList">
         <lightning:combobox name="field" class="picklist" label="Pick Field"
                             value="{!v.comboboxValue}" placeholder="Fields"
                             options="{!v.inpFieldList}"
